# cpputf8

./: .clang-format  .cmake-format.yaml  CMakeLists.txt  README.md  conanfile.py
cmake/: CompilerWarnings.cmake  UnicodeData.cmake
include/: CMakeLists.txt  cpputf8.hpp
include/cpputf8/: codepoint.hpp  codepoint_info.hpp  iterator.hpp  string.hpp
scripts/: generate_unicode_data.py
test/: CMakeLists.txt  cpputf8_test.hpp  decode_first.cpp  get_encode_width.cpp  get_info.cpp  is_valid.cpp  length.cpp  test.cpp
